RESOLVED FIXED258740
Fix shadow invalidation rect issue in vertical-rl mode
https://bugs.webkit.org/show_bug.cgi?id=258740
Summary Fix shadow invalidation rect issue in vertical-rl mode
Ahmad Saleem
Reported 2023-06-30 10:19:37 PDT
Hi Team, While going through Blink's commit, I came across another clean-up to fix shadow invalidation rects issue and don't seems to have any failing test case (in /fast/ directory). Blink Commit: https://src.chromium.org/viewvc/blink?revision=177246&view=revision Just wanted to raise, so I can get input, whether it is good to merge or not. Thanks!
Attachments
alan
Comment 2 2023-07-03 06:24:39 PDT
I'd look at the history of those flipped lines to see why we originally thought they needed flipping. Blink's commit message does not explain that (it just says it's erroneous)
Ahmad Saleem
Comment 3 2023-07-03 06:32:26 PDT
(In reply to zalan from comment #2) > I'd look at the history of those flipped lines to see why we originally > thought they needed flipping. Blink's commit message does not explain that > (it just says it's erroneous) Original bugs refer this: Shadows and border images should be unrelated to writing-mode. Should not flip the edges when invalidating them despite writing-mode. and in spec: https://drafts.csswg.org/css-writing-modes-3/#physical-only "The following values are purely physical in their definitions and do not respond to changes in writing mode:" -> the offsets of the box-shadow and text-shadow properties
Radar WebKit Bug Importer
Comment 4 2023-07-07 10:20:17 PDT
Ahmad Saleem
Comment 5 2023-11-30 18:37:05 PST
I tried to look back into this and this patch added the comment: https://bugs.webkit.org/attachment.cgi?id=106906&action=diff Although it is not super clear to myself. Since Simon is working on 'overflow' and 'repaint rects' clean-up, I think he might have more insight. @Simon - any insight?
Ahmad Saleem
Comment 6 2023-11-30 18:37:09 PST
I tried to look back into this and this patch added the comment: https://bugs.webkit.org/attachment.cgi?id=106906&action=diff Although it is not super clear to myself. Since Simon is working on 'overflow' and 'repaint rects' clean-up, I think he might have more insight. @Simon - any insight?
Simon Fraser (smfr)
Comment 7 2023-12-01 10:29:45 PST
I think we do want to take this change.
EWS
Comment 8 2023-12-01 17:54:54 PST
Committed 271416@main (b738ab355f6e): <https://commits.webkit.org/271416@main> Reviewed commits have been landed. Closing PR #21174 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.