Fix shadow repaint issue in vertical-rl mode

https://bugs.webkit.org/show_bug.cgi?id=258740
rdar://problem/111915460

Reviewed by Alan Baradlay.

Merge: https://src.chromium.org/viewvc/blink?revision=177246&view=revision

The original code erroneously flipped the shadow edges when the box is
in vertical-rl writing mode, causing incorrect visual overflow and
repaint rects.

Our actual painting code for shadow is correct. The bug is just about
incorrect invalidation rects.

As per Web Specification [1], the writing-mode should not affect 'box-shadow'
and 'text-shadow' offsets due to purely being physical.

[1] https://drafts.csswg.org/css-writing-modes-3/#physical-only

* Source/WebCore/rendering/RenderBox.cpp:
(RenderBox::applyVisualEffectOverflow):
* LayoutTests/fast/box-shadow/shadow-box-resize.html: Add Test Case
* LayoutTests/fast/box-shadow/shadow-box-resize-expected.txt: Add Test Case Expectation
* LayoutTests/fast/box-shadow/shadow-box-resize-writing-mode.html: Add Test Case
* LayoutTests/fast/box-shadow/shadow-box-resize-writing-mode-expected.txt: Add Test Case Expectation

Canonical link: https://commits.webkit.org/271416@main